@@ -3,22 +3,21 @@ package model;
 import util.MapChangeListener;
 import util.WorldSettings;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
 
 public abstract class AbstractWorldMap implements WorldMap {
     private Boundary bonds;
-    protected HashMap<Vector2d, List<Animal>> animals = new HashMap<>();
-    protected HashMap<Vector2d, Grass> grass = new HashMap<>();
+    protected final HashMap<Vector2d, ArrayList<Animal>> animals = new HashMap<>();
+    protected final HashMap<Vector2d, Grass> grass = new HashMap<>();
+    protected final ArrayList<Animal> dead = new ArrayList<>();
+    protected final ArrayList<Animal> animalsAlive = new ArrayList<>();
 
-    protected List<Animal> dead;
-
-    private int ID;
+    private final int ID;
     protected final WorldSettings settings;
     protected final ArrayList<MapChangeListener> observers = new ArrayList<>();
+    protected final HashMap<Vector2d, Animal> toRemove = new HashMap<>();
+    protected final HashMap<Vector2d, Animal> toAdd = new HashMap<>();
 
     public int counter = 0;
 
@@ -27,7 +26,7 @@ public abstract class AbstractWorldMap implements WorldMap {
         this.ID = ID;
         bonds = new Boundary(
                 new Vector2d(0, 0),
-                new Vector2d(settings.mapWidth(), settings.mapHeight())
+                new Vector2d(settings.mapWidth()-1, settings.mapHeight()-1)
         );
     }
 
@@ -43,29 +42,9 @@ public abstract class AbstractWorldMap implements WorldMap {
         return settings;
     }
 
-//    public void actualize_bonds(int x1, int y1){
-//        Boundary act_border = getCurrentBounds();
-//        int xp = act_border.lowerLeft().getX(); int yp = act_border.lowerLeft().getY();
-//        int xk = act_border.upperRight().getX(); int yk = act_border.upperRight().getY();
-//        if(x1 < xp) {
-//            xp = x1;
-//        }
-//        if(x1 > xk){
-//            xk = x1;
-//        }
-//        if(y1 < yp){
-//            yp = y1;
-//        }
-//        if(y1 > yk){
-//            yk = y1;
-//        }
-//        this.setBonds(new Boundary(new Vector2d(xp, yp), new Vector2d(xk, yk)));
-//    }
-
     public void place(Animal stwor) {
 
         Vector2d val = stwor.getPosition();
-//        actualize_bonds(val.getX(), val.getY());
 
         /* I wersja
         if(animals.containsKey(val)){
@@ -82,19 +61,19 @@ public abstract class AbstractWorldMap implements WorldMap {
         */
 
         if(animals.containsKey(val)){
-            List<Animal> lista = animals.get(val);
+            ArrayList<Animal> lista = animals.get(val);
             lista.add(stwor);
         }
         else{
-            animals.put(val, List.of(stwor));
-            mapChanged("");
+            animals.put(val, new ArrayList<>(Arrays.asList(stwor)));
         }
 
+        if (!animalsAlive.contains(stwor)) animalsAlive.add(stwor);
     }
 
     public int[] generate_genom(Animal par1, Animal par2){
 
-        int genomLen = 104; //przykładowe dane, będziemy brać z ustawień symualacji
+        int genomLen = settings.genomeLength();
 
         int E1 = par1.getEnergy(); int E2 = par2.getEnergy();
         float percent = (float) E1/(E1 + E2);
@@ -104,13 +83,13 @@ public abstract class AbstractWorldMap implements WorldMap {
 
         if(sideChoice == 1)
         {
-            p1 = 0; k1 = x;
+            p1 = 0; k1 = x-1;
             p2 = x; k2 = genomLen-1;
         }
         else
         {
             p1 = genomLen - x; k1 = genomLen - 1;
-            p2 = 0; k2 = genomLen - x;
+            p2 = 0; k2 = genomLen - x - 1;
         }
 
         int childGenom[] = new int[genomLen];
@@ -126,6 +105,7 @@ public abstract class AbstractWorldMap implements WorldMap {
     }
 
     public void reproduce(Animal act, List<Animal> group){
+        if (group == null) return;
 
         Vector2d pos = act.getPosition();
 
@@ -134,16 +114,17 @@ public abstract class AbstractWorldMap implements WorldMap {
 
         for (int i = 0; i < group.size(); i++){
             Animal temp = group.get(i);
-            MapDirection dir = MapDirection.NORTH;
+            MapDirection dir = Arrays.asList(MapDirection.values()).get(ThreadLocalRandom.current().nextInt(0, 8));
 
             int[] child_genom = generate_genom(act, temp);
 
             if(temp.getID() != act.getID() && temp.getEnergy() >= min_energy) {
-                Animal child = new Animal(pos, dir, act, temp, counter, child_genom);
+                Animal child = new Animal(pos, dir, act, temp, counter, child_genom, settings);
                 act.addChild(child);
                 temp.addChild(child);
                 temp.changeEnergy(temp.getEnergy() - lost_energy);
                 act.changeEnergy(temp.getEnergy() - lost_energy);
+                toAdd.put(pos, child);
                 // tutaj być moze trzeba sprawdzić czy po rozmnażaniu któryś z rodziców nie umrze
             }
         }
@@ -151,11 +132,11 @@ public abstract class AbstractWorldMap implements WorldMap {
 
     public void sunrise(){
 
-        int genomLen = settings.genomeLength(); // to tylko przykładowo podane, tak naprawdę jest to podawane jako parametr symulacji
-        int energyBoost = settings.grassEnergy(); // Również przykładowa dana
+        int genomLen = settings.genomeLength();
+        int energyBoost = settings.grassEnergy();
 
-        for (Map.Entry<Vector2d, List<Animal>> entry: this.animals.entrySet()) {
-            List <Animal> lista = entry.getValue();
+        for (Map.Entry<Vector2d, ArrayList<Animal>> entry: this.animals.entrySet()) {
+            ArrayList<Animal> lista = entry.getValue();
             Vector2d key = entry.getKey();
 
             for (int i = 0; i < lista.size(); i++) {
@@ -172,6 +153,11 @@ public abstract class AbstractWorldMap implements WorldMap {
                 int prevX = act.getPosition().getX(); int prevY = act.getPosition().getY();
                 act.move(MoveDirection.FORWARD, this);
 
+                mapChanged();
+                try {
+                    Thread.sleep(25);
+                } catch (InterruptedException ignore) {}
+
                 if(act.getPosition().getX() != prevX || act.getPosition().getY() != prevY){
                     reproduce(act, animals.get(act.getPosition()));
                 }
@@ -182,24 +168,20 @@ public abstract class AbstractWorldMap implements WorldMap {
                 if(this.grass.containsKey(newpos)){
                     act.changeEnergy(act.getEnergy() + energyBoost);
                     Grass plant = this.grass.get(newpos);
-                    this.grass.remove(plant); //te 2 linijki można zawrzeć w 1 linijce ale wyciągnięcie plant mogłoby się przydać
+                    this.grass.remove(newpos); //te 2 linijki można zawrzeć w 1 linijce ale wyciągnięcie plant mogłoby się przydać
                 }
                 else {
                     if(act.getEnergy() == 0){
                         act.setDead();
                         this.dead.add(act);
-                        if(lista.size() == 1){
-                            animals.remove(key);
-                        }
-                        else{
-                            lista.remove(i);
-                        }
+                        toRemove.put(key, act);
                     }
                 }
                 if(act.getAlive()){
                     act.increaseDays();
                 }
             }
+
         }
 
     }
@@ -228,7 +210,7 @@ public abstract class AbstractWorldMap implements WorldMap {
         return (animals.containsKey(position));
     }
 
-    public HashMap<Vector2d, List<Animal> > getAnimals() {
+    public HashMap<Vector2d, ArrayList<Animal>> getAnimals() {
         return animals;
     }
 
@@ -240,16 +222,12 @@ public abstract class AbstractWorldMap implements WorldMap {
         this.bonds = bonds;
     }
 
-    public String toString(){
-        Boundary limit = getCurrentBonds();
-        return "XD";
-    }
-
     @Override
     public int canMoveTo(Vector2d position) {
         int x = position.getX(); int y = position.getY();
-        int x_min = this.bonds.start().getX(); int x_max = this.bonds.koniec().getX();
-        boolean valid = (y >= this.bonds.start().getY() && y <= this.bonds.koniec().getY());
+        int x_min = this.bonds.start().getX(); int x_max = this.bonds.koniec().getX()-1;
+        boolean valid = (y >= this.bonds.start().getY() && y <= this.bonds.koniec().getY()-1);
+
         if(!valid) { return 0; } //
         else{
             if(x < x_min){ return -1; } // lewy brzeg
@@ -264,12 +242,37 @@ public abstract class AbstractWorldMap implements WorldMap {
     public void removeObserver(MapChangeListener observer) {
         observers.remove(observer);
     }
-    public void mapChanged(String message) {
+    public void mapChanged() {
         for (MapChangeListener observer: observers)
-            observer.mapChanged(this, message);
+            observer.mapChanged(this);
     }
 
     public int counter() {
         return counter++;
+    }
+
+    public ArrayList<Animal> getDead() {
+        return dead;
+    }
+
+    public ArrayList<Animal> getAlive() {
+        return animalsAlive;
+    }
+
+    public void removeQueued() {
+        for (Map.Entry<Vector2d, Animal> toRem: toRemove.entrySet()) {
+            Vector2d pos = toRem.getKey();
+            Animal obj = toRem.getValue();
+            animalsAlive.remove(obj);
+            if (animals.get(pos).size() > 1) animals.get(pos).remove(obj);
+            else animals.remove(pos);
+        }
+        toRemove.clear();
+    }
+    public void addQueued() {
+        for (Map.Entry<Vector2d, Animal> toRem: toAdd.entrySet()) {
+            place(toRem.getValue());
+        }
+        toAdd.clear();
     }
 }
